=================
Changes for Crate
=================

Unreleased
==========

 - Fix: documented minimum required java version

 - Added support for setting the default schema name in the SQLRequest class

 - Fix: Filtering by `_score` wasn't recognized on group-by queries.

2015/04/03 0.47.8
=================

 - Updated crash to version 0.11.5 which contains the following changes:

    - Fixed an issue with pasting multi-line statements from clipboard.

    - Added argcomplete support. If argcomplete is available bash argument
      completion will work if argcomplete is loaded.

 - Fix: COPY FROM is now skipping empty lines.

 - Fix: allow more than 1k elements in the IN query

 - allow to use ANY expression to compare primitive values against an array literal

 - Fix an issue while analyzing nested aggregations.

 - Fix: ip type conversion did not allow NULL values

 - Fix: Grouping or sorting on a dynamically created column of a partitioned
   table could cause a NullPointerException

 - include jts and spatial4j in client jar in order to properly use
   the ``geopoint`` type

 - produce a crate-client with all dependencies included under the 'io.crate'
   package namespace in order to avoid conflicts

 - Fix: select queries querying for the primary key on custom schemas did now
   return the correct results

 - Fixed an issue that caused ``where somefield in (null)`` to match all rows

 - Fix: Do not shutdown the BulkShardProcessor while there are pending requests
   anymore

 - Fix: The ``format`` scalar function now always uses Locale.ENGLISH

 - Fixed misleading error message for trying to group by invalid data type.

2015/03/17 0.48.0
=================

 - Fixed misleading error message for trying to group by invalid data type.

 - COPY FROM / COPY TO will now automatically create a quoted URI if only a
   path is given.

 - Updated crash to version 0.11.4 which contains following changes:
